# diagram-renderer

./: .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXAMPLE_DIAGRAMS_STATUS.md  GRAPHVIZ_EXAMPLES_STATUS.md  PLANTUML_EXAMPLES_STATUS.md  README.md  convert_svg_to_png.py  dashboard.py  demo_improved_mermaid.py  generate_demo.py  generate_external_demo.py  generate_svg_demo.py  generate_svg_only.py  main.py  pyproject.toml  pytest.ini  st_diagram.py  todo.md
.github/workflows/: ci.yml  release.yml  visual-regression.yml
diagram/: __init__.py
diagram/renderers/: base.py  graphviz.py  mermaid.py  plantuml.py
diagram_renderer/: __init__.py  __version__.py  error_pages.py  external_diagrams.py  template_engine.py
diagram_renderer/renderers/: base.py  graphviz.py  mermaid.py  plantuml.py
examples/: README.md  __init__.py  cli.py  dashboard.py  mcp-README.md  mcp_server.py  regenerate_all_diagrams.py  regenerate_examples.py  regenerate_graphviz_examples.py  regenerate_plantuml_examples.py  run-dashboard.py  streamlit_diagram.py  unified_demo.py  webapp-README.md  webapp.py
examples/diagram_generators/: __init__.py  (+4 more)
scripts/: update_version.py
tests/: __init__.py  conftest.py  test_base_renderer.py  test_charset_encoding.py  test_cli_simple.py  test_dashboard_integration.py  test_diagram_renderer.py  test_download_functionality.py  test_mermaid_renderer.py  test_modernization_features.py  test_plantuml_renderer.py  test_static_assets.py  test_unified_rendering.py  test_visual_regression.py  test_webapp_api.py
(+11 files in other folders)
